# Quant-OS

./: .gitignore  DEPLOYMENT.md  Dockerfile  FILE_MANIFEST.md  PERFORMANCE.md  QUICKSTART.md  README.md  docker-compose.yml  main.py  pyproject.toml  redis.conf  requirements.txt  test_bench.py  verify_connection.py
agents/: directional.py  market_maker.py
config/: settings.py
core/: order_flow.py  regime_detector.py  risk_engine.py
pipeline/: mt5_gateway.py  redis_stream.py
