[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-x-core-os"
version = "1.0.0"
description = "Elite quantitative trading platform with HHMM regime detection, Hawkes flow analysis, QAOA optimization, and multi-agent reinforcement learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Sovereign Capital Systems", email = "dev@sovereign-x.com"}
]
keywords = ["trading", "quantitative", "algorithmic", "hft", "machine-learning", "reinforcement-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "numba>=0.57.0",
    "redis>=5.0.0",
    "MetaTrader5>=5.0.40",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "aiofiles>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "mypy>=1.4.0",
]

monitoring = [
    "prometheus-client>=0.17.0",
    "datadog>=0.47.0",
]

[project.urls]
Homepage = "https://sovereign-x.com"
Documentation = "https://docs.sovereign-x.com"
Repository = "https://github.com/sovereign-x/core-os"
Issues = "https://github.com/sovereign-x/core-os/issues"

[tool.setuptools]
packages = ["config", "core", "agents", "pipeline"]

[tool.setuptools.package-data]
sovereign-x = ["*.json", "*.yaml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --strict-markers --tb=short"
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["config", "core", "agents", "pipeline"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
